# WeatherStation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WeatherStation.pro  WeatherStation.pro.user.0a61e95  WeatherStation.pro.user.9b68e03  build_android.sh  gui.qrc  main.cpp
ATTiny/: nrf24.c
Debug/: Makefile  Makefile.Debug  Makefile.Release  WeatherStation  moc_guipainter.cpp  moc_ledpainter.cpp  object_script.WeatherStation.Debug  object_script.WeatherStation.Release
Source/Gui/: GUIPainter.cpp  Gui.pro  main.cpp
Source/Server/: CMakeLists.txt  Server.pro  WSServer.h  WSThread.cpp  WSThread.h  WUManager.cpp  WUManager.h  main.cpp
Source/Server/Sensors/: HTS221.cpp  HTS221.h  I2CDevice.cpp  I2CDevice.h  LPS25H.cpp  LPS25H.h  NRF24L.h  SPIDevice.cpp
attiny/: spi_device.c  spi_device.h
attiny85/: Makefile  main.c  nrf24.c  nrf24.h  sensors.c  sensors.hex  spi_device.c  spi_device.h
avr/: nrf24.h  test.c
gui/: CMakeLists.txt  gui.qrc  guipainter.cpp  guipainter.h  ledpainter.cpp  ledpainter.h  main.cpp  main.qml  weathers-gui.pro
gui/android/: local.properties~
gui/include/: guipainter.h
gui/res/: ForecastView.qml  MainView.qml  OutsideView.qml  WeatherIcon.qml  main (kopia).qml
gui/resources/: gui.qrc
gui/resources/controls/: Variables.qml
gui/resources/qml/: DisplayScale.qml  ForecastView.qml  TextShadow.qml
gui/src/: guipainter.cpp  main.cpp
res/: Colors.qml  Drawer.qml  ForecastView.qml  InsideView.qml  LedMatrix.qml  MainView.qml  OutsideView.qml  Pixel.qml  SingleDayView.qml  TextShadow.qml  WeatherIcon.qml  main (kopia).qml  main.qml  main.qml.Zs1640  main.qml.bb1640  main.qml.uY1640
res/img/: measurement-units-temperature-icon.xcf
sensors/: ahrs.cpp  ahrs.h  hts221.cpp  hts221.h  i2cdevice.cpp  lis35de.cpp  lis35de.h  lis35de_testr  lis35de_testr.c  lps25h.cpp  lps25h.h  lsm9ds1.cpp  lsm9ds1.h  main.c  sense_hat_testr.py  spi_device.c  spidevice.cpp  wireless.cproj
sensors/Debug/: Makefile  nrf24.d  sht31-d.d  wireless.hex  wireless.srec
server/: weathers-srv.pro  wsserver.cpp  wsserver.h
server/include/: wsserver.hpp  wsthread.hpp  (+1 more)
srv/: srv.pro  wumanager.cpp
tools/: wumanager.cpp  wumanager.h
weathers-gui/: gui.qrc  guipainter.cpp  guipainter.h  main.cpp  weathers-gui.pro
weathers-srv/: main.cpp  weathers-srv.pro  wsserver.cpp  wsserver.h  wsthread.cpp  wsthread.h  wumanager.cpp  wumanager.h
wireless/: main.c  nrf24.c  nrf24.h  spi_device.h  wireless.atsln  wireless.componentinfo.xml
wireless__/: Makefile  wireless.atsln
(+45 files in other folders)
